# on-call-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.claude/: launch.json
server/: Dockerfile  __init__.py  app.py  executor.py  on_call_env_environment.py
server/tasks/: __init__.py  base.py  easy.py  hard.py  medium.py
